--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,3 @@
-elpa
-ac-comphist.dat
-auto-save-list
-backups
-elpa
-pymacs
-python-mode
-themes
-.# #
-
-bash/bash.d/.#bash_it.sh
-
-emacs/emacs.d/.smex-items
-
-emacs/emacs.d/elpa/archives/gnu/archive-contents
-
-emacs/emacs.d/elpa/archives/gnu/archive-contents
+.*~
+emacs/emacs.d/
+emacs.d/
