--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -25,20 +25,24 @@ set -g prefix C-Space
 # Basics
 set -g mouse on
 set -g base-index 1
-set -s escape-time 0
+set -s escape-time 10
 set -g wrap-search off
 set -g allow-rename off
 set -g pane-base-index 1
-bind C-Space last-window
 set -g visual-activity on
 set -g renumber-windows on
 set -g history-limit 10000
-set -w -g monitor-activity on
+setw -g monitor-activity on
+set -g default-terminal "screen-256color"
+
+bind C-Space last-window
 bind t split-window -h "vim ~/drive/personal/shared/TODO.md"
 bind s command-prompt -p "send-keys: " "send-keys -t right '%%' C-m"
 bind K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
 
 # Panes
+# bind -r C-h select-window -t :-
+# bind -r C-l select-window -t :+
 bind | split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
@@ -55,6 +59,7 @@ set -g status-fg white
 set -g status-right "omartrejo.com "
 set -g window-status-current-fg black
 set -g window-status-current-bg white
+set -g window-status-current-attr red
 
 # TODO: From here to end...
 
