--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -57,9 +57,9 @@ bind l select-pane -R
 set -g status-bg black
 set -g status-fg white
 set -g status-right "omartrejo.com "
-set -g window-status-current-fg black
-set -g window-status-current-bg white
-set -g window-status-current-attr red
+
+set -g window-status-style bg=default,fg=cyan,dim
+set -g window-status-current-style bg=black,fg=white
 
 # TODO: From here to end...
 
