--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,28 +1,6 @@
-# Useful commands:
-# - tmux new -s <name>
-# - tmux attach -t <name>
-# - tmux kill-session -t <name>
-# - capture-pane
-#
-# Keybindings:
-# x   Kill pane
-# {}  swap-pane
-# C-o rotate-window
-# w   List all windows
-# q   Show pane numbers
-# o   select-pane -t :.+
-# &   Kill current window
-# ,   Rename current window
-# ?   List all keybindings
-# +   break pane into window
-# <window-number>     Switch to window
-# C-b : "break-pane"  Make pane its own window
-
-# Prefix
 unbind C-b
 set -g prefix C-Space
 
-# Basics
 set -g mouse on
 set -g base-index 1
 set -s escape-time 10
@@ -32,8 +10,8 @@ set -g pane-base-index 1
 set -g visual-activity on
 set -g renumber-windows on
 set -g history-limit 10000
-setw -g monitor-activity on
 set -g default-terminal "screen-256color"
+setw -g monitor-activity on
 
 bind C-Space last-window
 bind t split-window -h "vim ~/drive/personal/shared/TODO.md"
@@ -127,3 +105,15 @@ set -w -g mode-keys vi
 
 # Reload
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded"
+
+# Other option: rebind copy/paste keys
+# unbind [
+# bind Escape copy-mode
+# unbind p
+# bind p paste-buffer
+# bind -t vi-copy 'v' begin-selection
+# bind -t vi-copy 'y' copy-selection
+
+# System clipboard (requires `xclip` installed)
+# bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+# bind C-v run "tmux set-buffer |"$(xclip -o -sel clipboard)\"; tmux paste buffer"
