--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -53,3 +53,24 @@ set -g window-status-current-style bg="#98C379",fg="#282C34"
 
 # Reload
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded"
+
+# TODO: Eliminiate if not used
+# better prefix key
+set -g prefix C-a
+bind C-a send-prefix
+# better splitting
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+# less colourful status
+set -g status-bg colour240
+set -g status-fg white
+# 256 colors support
+set -g default-terminal "screen-256color"
+# sane scrolling
+set -g mouse on
+# list of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+# TMUX plugin manager (keep at the bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
