--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,17 +1,31 @@
-set -g prefix C-Space
+# Useful Commands
+# - s    Sessions
+# - ?    Keybindings
+# - z    Zoom to pane
+# - ,    Rename window
+# - $    Rename session
+# - D    Detach others
+# - d    Detach
+# - ]    Paste
 
-set -g mouse on
-set -g base-index 1
-set -s escape-time 10
-set -g wrap-search off
-set -g allow-rename off
-set -g pane-base-index 1
-set -g visual-activity on
-set -g renumber-windows on
-set -g history-limit 10000
+set -g prefix C-Space
+bind C-Space send-prefix
+
 set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",*256col*:Tc"
-setw -g monitor-activity on
+set -g history-limit 10000
+set -g monitor-activity on
+set -g renumber-windows on
+set -g visual-activity on
+set -g allow-rename off
+set -g wrap-search off
+set -g escape-time 10
+set -g mouse on
+
+set -g pane-base-index 1
+set -g base-index 1
+
+set -g status-keys emacs
+set -g mode-keys emacs
 
 # Windows
 bind C-Space last-window
@@ -24,53 +38,30 @@ bind | split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 bind M-0 select-layout even-horizontal
 bind M-) select-layout even-vertical
+
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# Vim-like
-set -w -g mode-keys vi
-set -g status-keys vi
-# unbind [
-# unbind p
-# bind p paste-buffer
-# bind Escape copy-mode
-# bind -t vi-copy y copy-selection
-# bind -t vi-copy v begin-selection
+bind -r C-h resize-pane -L 15
+bind -r C-j resize-pane -D 15
+bind -r C-k resize-pane -U 15
+bind -r C-l resize-pane -R 15
 
 # Others
-bind t split-window -h "vim ~/drive/personal/shared/TODO.md"
-bind s command-prompt -p "send-keys: " "send-keys -t right '%%' C-m"
-bind K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
+bind R source-file ~/.tmux.conf \; display-message "Config reloaded"
+bind S command-prompt -p "send-keys: " "send-keys -t right '%%' C-m"
+bind T split-window -h "emacs -nw ~/drive/personal/shared/TODO.md"
+bind L list-keys
 
 # Status bar
 set -g status-bg "#282C34"
 set -g status-fg "#ABB2BF"
-set -g status-right "omartrejo.com "
+set -g status-right "mllabs.com "
 set -g window-status-style bg="#282C34",fg="#ABB2BF"
-set -g window-status-current-style bg="#98C379",fg="#282C34"
+set -g window-status-current-style bg="#ABB2BF",fg="#282C34"
 
-# Reload
-bind r source-file ~/.tmux.conf \; display-message "Config reloaded"
-
-# TODO: Eliminiate if not used
-# better prefix key
-set -g prefix C-a
-bind C-a send-prefix
-# better splitting
-bind | split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
-# less colourful status
-set -g status-bg colour240
-set -g status-fg white
-# 256 colors support
-set -g default-terminal "screen-256color"
-# sane scrolling
-set -g mouse on
-# list of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-# TMUX plugin manager (keep at the bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
+# TODOs:
+# Where would this be useful?
+# bind K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
