--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,13 +12,14 @@ set -g prefix C-Space
 bind C-Space send-prefix
 
 set -g default-terminal "xterm-256color"
+set -g status-right-length 200
+set -g status-left-length 200
 set -g history-limit 10000
 set -g monitor-activity on
 set -g renumber-windows on
 set -g visual-activity on
 set -g allow-rename off
 set -g wrap-search off
-set -g escape-time 10
 set -g mouse on
 
 set -g pane-base-index 1
@@ -44,10 +45,10 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-bind -r C-h resize-pane -L 15
-bind -r C-j resize-pane -D 15
-bind -r C-k resize-pane -U 15
-bind -r C-l resize-pane -R 15
+bind -r M-h resize-pane -L 15
+bind -r M-j resize-pane -D 15
+bind -r M-k resize-pane -U 15
+bind -r M-l resize-pane -R 15
 
 # Others
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded"
