--- a/python/pytest.ini
+++ b/python/pytest.ini
@@ -4,8 +4,8 @@
 #       effects), then we can use `$ pytest -m ""` to override it.
 #
 [pytest]
-norecursedirs = dependencies  # Avoid symlinked Airflow tests
 addopts = -x -vv --hypothesis-show-statistics -m "not external and not side_effects"
+norecursedirs = env
 markers =
     external: tests that make use of external resources (e.g. DBs)
     side_effects: has at least one sideffect (e.g. write to DB)
