--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,8 +8,8 @@
 # - d    Detach
 # - ]    Paste
 
-set -g prefix C-Space
-bind C-Space send-prefix
+set -g prefix M-Space
+bind M-Space send-prefix
 
 set -g default-terminal "xterm-256color"
 set -g status-right-length 200
@@ -29,9 +29,11 @@ set -g status-keys emacs
 set -g mode-keys emacs
 
 # Windows
-bind C-Space last-window
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
+bind M-Space last-window
+bind -n -r M-h select-window -t :-
+bind -n -r M-l select-window -t :+
+bind -n -r C-M-h swap-window -t -1\; select-window -t -1
+bind -n -r C-M-l swap-window -t +1\; select-window -t +1
 bind c new-window -c '#{pane_current_path}'
 
 # Panes
@@ -45,24 +47,31 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-bind -r M-h resize-pane -L 15
-bind -r M-j resize-pane -D 15
-bind -r M-k resize-pane -U 15
-bind -r M-l resize-pane -R 15
+bind -r C-h resize-pane -L 15
+bind -r C-j resize-pane -D 15
+bind -r C-k resize-pane -U 15
+bind -r C-l resize-pane -R 15
 
 # Others
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded"
-bind S command-prompt -p "send-keys: " "send-keys -t right '%%' C-m"
-bind T split-window -h "emacs -nw ~/drive/personal/shared/TODO.md"
+bind T split-window -h "emacs -nw ~/drive/drive/shared/TODO.md"
 bind L list-keys
 
 # Status bar
 set -g status-bg "#282C34"
 set -g status-fg "#ABB2BF"
-set -g status-right "mllabs.com "
 set -g window-status-style bg="#282C34",fg="#ABB2BF"
 set -g window-status-current-style bg="#ABB2BF",fg="#282C34"
+set -g status-right "ML Labs: Omar Trejo (omar@mllabs.com) "
 
-# TODOs:
-# Where would this be useful?
-# bind K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
+# Clipboard
+bind M-w run -b "tmux show-buffer | xclip -i"
+
+# Replace new lines with spaces when pasting
+# bind C-y run -b "exec </dev/null; xclip -o | awk 1 ORS=' ' | tmux load-buffer - ; tmux paste-buffer"
+
+# Do not replace new lines with spaces when pasting
+bind C-y run -b "exec </dev/null; xclip -o | tmux load-buffer - ; tmux paste-buffer"
+
+# TODO: Currently not using side panes, but how could this be useful?
+# bind S command-prompt -p "send-keys: " "send-keys -t right '%%' C-m"
