--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,9 +17,11 @@ set -g status-left-length 200
 set -g history-limit 10000
 set -g monitor-activity on
 set -g renumber-windows on
-set -g visual-activity on
+set -g visual-activity off
+set -g bell-on-alert off
 set -g allow-rename off
 set -g wrap-search off
+set -g visual-bell off
 set -g mouse on
 
 set -g pane-base-index 1
