--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,7 +7,6 @@
 # - D    Detach others
 # - d    Detach
 # - ]    Paste
-
 set -g prefix M-Space
 bind M-Space send-prefix
 
@@ -21,6 +20,7 @@ set -g visual-activity off
 set -g allow-rename off
 set -g wrap-search off
 set -g visual-bell off
+set -g xterm-keys on
 set -g mouse on
 
 set -g pane-base-index 1
